# ipc2

./: Cargo.toml  README.md
ipc2_common/: Cargo.toml
ipc2_common/src/: lib.rs  message.rs  socket.rs
ipc2_host/: Cargo.toml
ipc2_host/src/: lib.rs  manager.rs  server.rs  util.rs  worker.rs  workerset.rs
ipc2_worker/: Cargo.toml
ipc2_worker/src/: client.rs  lib.rs
