[package]
name = "ipc2_worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
thiserror = "1.0.31"
tokio = { version = "1", features = ["full"] }
ipc2_common = { path = "../ipc2_common" }
serde = { version = "1", features = ["derive"] }
log = "0.4.17"
async-trait = "0.1.56"
